--- a/src/pages/StartUp/OtherUserProfile/OtherUserProfile.scss
+++ b/src/pages/StartUp/OtherUserProfile/OtherUserProfile.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding: 0 15px;
+  // padding: 0 15px;
 
   .font_12 {
     font-size: 12px;
@@ -31,7 +31,7 @@
           align-items: center;
           gap: 5px;
         }
-        .connection-status{
+        .connection-status {
           background-color: #fd5901;
           color: white;
         }
